<resources>
    <string name="app_name">Tutorme</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_category">Add category</string>
    <string name="action_add_subcategory">Add subcategory</string>

    <string name="validate_email">Invalid email-id entered.</string>
    <string name="validate_password">Invalid password entered</string>
    <string name="email_blank">Email cannot be blank</string>
    <string name="pwd_blank">Password cannot be blank</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_activity_add_new_adv">New Post</string>
    <string name="title_activity_existing_adv">Post Details</string>
    <string name="update_profile">Update Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_update_post_detail">UpdatePostDetailActivity</string>
    <string name="advance_search">Advanced search</string>
</resources>
