<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="101"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item android:id="@+id/action_add_category" android:title="@string/action_add_category"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_add_subcategory" android:title="@string/action_add_subcategory"
        android:orderInCategory="103" app:showAsAction="never" />

</menu>
